2010-07-12  Michael Hutchinson  <mhutchinson@novell.com>

	* VersionControl.addin.xml:
	* MonoDevelop.VersionControl.Views/DiffParser.cs: Track
	  ProjectDomService/Parser API.

2010-07-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/DropDownBox.cs: fixed some
	  drop down box issues.

2010-07-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/DropDownBox.cs:
	* MonoDevelop.VersionControl.Views/BlameWidget.cs:
	* MonoDevelop.VersionControl.Views/ComparisonView.cs:
	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs: Worked
	  on version control gui.

2010-07-07  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.VersionControl.csproj:
	* MonoDevelop.VersionControl.Views/DropDownBox.cs:
	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs: Added
	  drop down box for the version control views (TODO:
	  Selector).

2010-07-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs: Fixed
	  error in calculation.

2010-07-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/BlameWidget.cs:
	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs:
	  Improved the visualization of the change-diff - it's now
	  easier to see what has changed when only a part of the line
	  changed.

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/ComparisonView.cs:
	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs:
	  Undo/Redo now works in comparison view.

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/BlameWidget.cs: Added
	  bounds check.

2010-07-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/BlameWidget.cs: set correct
	  bounds.

2010-07-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/BlameWidget.cs: Added range
	  check.

2010-07-01  Mike Krüger  <mkrueger@novell.com>
