@@ -1,3 +1,9 @@
+2010-07-14  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.VersionControl.Views/BlameWidget.cs:
+	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs: Caret
+	  state is now shown.
+
 2010-07-12  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* VersionControl.addin.xml:
